--- a/src/styles/Dropdown.module.css
+++ b/src/styles/Dropdown.module.css
@@ -11,8 +11,8 @@
   border: none;
   text-align: left;
   outline: none;
-  font-size: 18px;
-  font-weight: bold;
+  font-size: 2rem;
+  font-weight: 400;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -28,8 +28,11 @@
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
-  background-color: black;
+  background-color: white;
+  color: #444;
   border-bottom: 1px solid #ccc;
+  min-width: 500px;
+  width: 35vw;
 }
 
 .content p {
