--- a/src/styles/ResumePreview.module.css
+++ b/src/styles/ResumePreview.module.css
@@ -1,61 +1,82 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 .body {
-    width: 21cm;
-    min-height: 29.7cm;
-    height: auto;
-    background-color: white;
-    color: #000;
-    display: grid;
-    grid-template-columns: 1fr 2fr;
+  width: 21cm;
+  min-height: 29.7cm;
+  height: auto;
+  background-color: white;
+  color: #000;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
 }
 
 .leftSide {
-    background-color: #f0f4f8;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+  background-color: #f0f4f8;
+  padding: 20px;
+  padding-left: 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .nameHeadline {
-    margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 
 .name {
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-    font-size: 24px;
-    font-weight: bold;
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 .headline {
-    font-size: 14px;
-    color: #666;
+  font-size: 14px;
+  color: #666;
 }
 
-.leftHeaders {
-    font-size: 18px;
-    color: #2c3e50;
-    margin-top: 20px;
-    border-bottom: 1px solid #ccc;
-    padding-bottom: 5px;
-    font-weight: bold;
+.leftHeadersLabel {
+  font-size: 1.5rem;
+  color: #2c3e50;
+  margin-top: 20px;
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 15px;
+  font-weight: bold;
 }
 
 .rightSide {
-    background-color: white; 
-    padding: 20px;
+  background-color: white;
+  padding: 20px;
 }
 
 .rightHeaders {
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 20px;
+  font-size: 1.75rem;
+  font-weight: bold;
+  margin-bottom: 20px;
 }
 
+.info {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.info div {
+  text-align: start;
+}
+
+.info .postcodeCity {
+  display: flex;
+  gap: 10px;
+}
+
+.logo {
+  width: 25px;
+  height: 25px;
+}
